chore: setup linters (+scss), add necessary pgs, actualize scripts

--- a/.vscode/settings.example.json
+++ b/.vscode/settings.example.json
@@ -4,5 +4,9 @@
   },
   "[javascript,typescript]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
-  }
+  },
+  "[scss,css,html]": {
+    "editor.defaultFormatter": "stylelint.vscode-stylelint"
+  },
+  "stylelint.validate": ["scss", "css", "html"]
 }
