--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,15 +11,18 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
-    "prettier/prettier": "error",
-    "no-console": "warn",
-    "no-unused-vars": "warn"
+    "prettier/prettier": "warn",
+    "no-console": "warn"
   },
   "overrides": [
     {
       "files": ["*.ts"],
       "rules": {
-        "@typescript-eslint/no-unused-vars": ["warn"]
+        "@typescript-eslint/no-unused-expressions": "off",
+        "@typescript-eslint/no-unused-vars": [
+          "warn",
+          { "argsIgnorePattern": "^_" }
+        ]
       }
     }
   ]
