--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "source": "src/index.html",
   "scripts": {
+    "start": "npm-run-all build serve",
     "dev": "parcel",
     "build": "parcel build",
+    "serve": "http-server dist/",
     "lint:scripts": "eslint \"**/*.{js,ts}\" --fix",
     "lint:styles": "stylelint '**/*.{css,scss,html}' --fix",
     "format": "prettier --write \"src/**/*.{css,scss,js,ts,html}\" \"*.md\"",
@@ -24,6 +26,8 @@
     "eslint": "8.57.1",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
+    "http-server": "14.1.1",
+    "npm-run-all": "4.1.5",
     "parcel": "2.13.3",
     "postcss-html": "1.8.0",
     "postcss-nested": "7.0.2",
